# my-stack-app

./: .dockerignore  .gitignore  BRIEF.md  CLAUDE.md  Dockerfile  Makefile  README.md  myspot.db  pyproject.toml
.cursor/rules/: aws-cdk.mdc  fastapi.mdc  frontend.mdc  project.mdc
.github/workflows/: ci.yml
app/: config.py  database.py  main.py  models.py
app/routers/: pages.py  queue.py  tracks.py
app/templates/: base.html  favourites.html  index.html  queue.html
infrastructure/: package-lock.json  package.json  tsconfig.json
infrastructure/lib/: infrastructure-stack.ts
infrastructure/test/: infrastructure.test.ts
infrastructure/test/__snapshots__/: infrastructure.test.ts.snap
tests/: conftest.py  test_database.py  test_pages.py  test_queue.py  test_tracks.py
